<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST105_Fanuc_status_t" Id="{b533ae56-77ff-4eff-a336-565c9fd8cfae}">
    <Declaration><![CDATA[TYPE ST105_Fanuc_status_t :
STRUCT
    Picked     : BIT; // Piece(s) picked by the robot
    Placed     : BIT; // Piece(s) placed by the robot
    reserve_b2 : BIT; // 
    reserve_b3 : BIT; // 
    reserve_b4 : BIT; // 
    reserve_b5 : BIT; // 
    reserve_b6 : BIT; // 
    reserve_b7 : BIT; // 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>