<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST105_PnpVerPushPos_e" Id="{cb9e6498-cbee-420e-9e2a-d022867b70cf}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE ST105_PnpVerPushPos_e :
(
	down,
	up,
	_max
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>