<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="ST185_Axis" Id="{4f83fa99-6664-41ab-a13c-c55066dee2aa}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
    const185_01Y : AxisLinMotConst_t := (POS_MIN := -5, POS_MAX := 250, VELO_MAX := 2000, VELO_MANU := 100);
    const185_02Z : AxisLinMotConst_t := (POS_MIN := -5, POS_MAX := 300, VELO_MAX := 2000, VELO_MANU := 50);
    const185_10Z : AxisLinMotConst_t := (POS_MIN := -5, POS_MAX := 200, VELO_MAX := 2000, VELO_MANU := 50);

END_VAR
VAR_GLOBAL
    axis185_01Y : AxisLinMot_t;
    axis185_02Z : AxisLinMot_t;
    axis185_10Z : AxisLinMot_t;
END_VAR
VAR_GLOBAL RETAIN
    // Recipe values are managed elsewhere
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>